deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: covidcurves-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: covidcurves
