deployment/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: covidcurves
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cloudflare
spec:
  rules:
    - host: covidcurves.rossmasters.com
      http:
        paths:
          - path: /
            backend:
              serviceName: covidcurves-web
              servicePort: 8000
  tls:
    - hosts:
        - covidcurves.rossmasters.com
      secretName: covidcurves-tls
